--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
                     <img src="./src/imagens/linkedin-in.svg" alt="icone linkedin-in" class="icone">
                 </a>
             </li>
+            <li>
+                <a href="https://www.instagram.com/marcelocardoso.msc/" target="_blank">
+                    <img src="./src/imagens/icone-instagram-03.webp" alt="icone instagram" class="icone">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/channel/UCTCXtjkr-DsO0kXlfESXHlA" target="_blank">
+                    <img src="./src/imagens/160205.png" alt="icone youtube" class="icone">
+                </a>
+            </li>
+           
         </ul>
     </aside>
    </main>
